--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,9 @@
         "php": ">=5.6.0",
         "topthink/framework": "5.1.*",
         "elasticsearch/elasticsearch": "^6.7",
-        "workerman/workerman": "^4.0"
+        "workerman/workerman": "^3.5",
+        "workerman/gatewayclient": "^3.0",
+        "workerman/gateway-worker": "^3.0"
     },
     "autoload": {
         "psr-4": {
